[BLUM-21] kpi update
